# voltron

./: .gitignore  Cargo.toml  README.md
client/: .env  .gitignore  package-lock.json  package.json
client/src/: App.js  App.tsx  index.js  sign-in.component.jsx
client/src/components/: admin.tsx  instructor.tsx  sign-in.tsx  student.tsx
client/src/styles/: admin.css  instructor.css  sign-in.css  student.css
client/src/utils/: firebase.utils.js
group_code/: class0_group0_code.txt  class0_group100_code.txt  class1_group1_code.txt  class1_group2_code.txt  group0_code.txt  group2_code.txt
server/: .gitignore  Cargo.toml  build.rs  config.toml  rust-toolchain.toml  scrutinizer-config.toml
server/src/: admin.rs  backend.rs  common.rs  config.rs  context.rs  instructor.rs  lib.rs  login.rs  main.rs  policies.rs  register.rs  schema.sql  student.rs
server/src/policies/: auth_state.rs  buffer.rs  email_pol.rs  instructor.rs  instructor_pol.rs  mod.rs  read_buffer.rs  student_pol.rs  write_buffer.rs
server/tests/: basic_tests.rs  buggy_tests.rs  common.rs  mod.rs
src/: admin.rs  api.rs  backend.rs  common.rs  config.rs  instructor.rs  login.rs  main.rs  register.rs  schema.sql  student.rs
templates/: admin.html.hbs  instructor.html.hbs  login.html.hbs  student.html.hbs
vue-client/: package-lock.json  package.json
vue-client/src/: App.vue
