[package]
name = "voltron"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
mysql = "24.0.0"
rocket = "0.5.0-rc.1"
rocket_cors = "0.6.0"
rocket_firebase_auth = "0.5.0"
serde = "1.0.195"
toml = "0.2.1"

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.1"
features = ["handlebars", "tera"]

[dependencies.handlebars]
features = ["dir_source"]
