[package]
name = "voltron"
version = "0.1.0"
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alohomora = { path = "../../Alohomora/alohomora", default_features = false, features = ["derive"] }
bitvec = "0.22.3"
rocket = { git = "https://github.com/KinanBab/Rocket.git", branch = "main" }
chrono = "0.4.31"
mysql = "21.0.2"
mysql_common = "0.22"
rocket_cors = { git = "https://github.com/KinanBab/rocket_cors.git", branch = "main" }
rocket_firebase_auth = { git = "https://github.com/22ridley/rocket-firebase-auth.git" }
serde = "1.0.195"
toml = "0.2.1"
slog = { version = "2.4.0", features = ["max_level_trace", "release_max_level_trace"] }
slog-term = "2.4.0"
once_cell = "1.19.0"
serde_json = "1.0.116"
wiremock = "0.6.0"
tokio = "1.37.0"

[dependencies.rocket_dyn_templates]
git = "https://github.com/KinanBab/Rocket.git"
branch = "main"
features = ["handlebars", "tera"]

[dependencies.handlebars]
version = "4.3.3"
features = ["dir_source"]

[build-dependencies]
alohomora_build = { path = "../../Alohomora/alohomora_build" }

[patch.crates-io]
funty = { git = "https://github.com/bitvecto-rs/funty/", rev = "7ef0d890fbcd8b3def1635ac1a877fc298488446" }

[workspace.metadata.dylint]
libraries = [  
   { path = "../../Alohomora/alohomora_lints" },
]